--- a/index.html
+++ b/index.html
@@ -1,1 +1,160 @@
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="Play Radio Stream for FREE, using only the hosting server">
+    <meta name="author" content="FlorekPro">
+    <title>Audio Stream Simulation Time Server - ASSTS </title>
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            background-color: #f3f3f3;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        #load-song {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            border: none;
+            border-radius: 50%;
+            width: 100px;
+            height: 100px;
+            font-size: 2em;
+            background: #333;
+            color: #fff;
+            cursor: pointer;
+            outline: none;
+            transition: background 0.3s ease;
+        }
+        #load-song:hover {
+            background: #555;
+        }
+        #load-song i {
+            margin-right: 0;
+        }
+        #audio-player {
+            display: none;
+        }
+        #visualizer {
+            position: relative;
+            top: 0;
+            left: 0;
+            width: 40%;
+            height: 20%;
+            z-index: 1;
+            pointer-events: none;
+        }
+    </style>
+
+
+</head>
+<body>
+
+<audio id="audio-player" controls></audio>
+<button id="load-song"><i class="fas fa-play"></i></button>
+
+<canvas id="visualizer"></canvas>
+
+<!--START ---  audio control via stream music -->
+<script>
+    const audioPlayer = document.getElementById('audio-player');
+    const loadSongButton = document.getElementById('load-song');
+    const playIcon = document.querySelector('#load-song i');
+
+    function loadSong() {
+        fetch('random_song.php')
+            .then(response => response.json())
+            .then(data => {
+                audioPlayer.src = data.song;
+                audioPlayer.currentTime = data.timeOffset;
+                audioPlayer.play();
+                playIcon.className = 'fas fa-pause';
+            })
+            .catch(error => console.error('Wystąpił błąd:', error));
+    }
+
+    loadSongButton.addEventListener('click', () => {
+        if (audioPlayer.paused || audioPlayer.ended) {
+            loadSong();
+        } else {
+            audioPlayer.pause();
+            playIcon.className = 'fas fa-play';
+        }
+    });
+
+    audioPlayer.addEventListener('ended', loadSong);
+</script>
+<!--END ---  audio control via stream music -->
+
+<!-- START --- visual song generate with js -->
+<script>
+    const canvas = document.getElementById('visualizer');
+    const canvasCtx = canvas.getContext('2d');
+
+    let audioCtx, analyser, source, audioDataArray, bufferLength;
+
+    function setupWebAudio() {
+        audioCtx = new AudioContext();
+        analyser = audioCtx.createAnalyser();
+        source = audioCtx.createMediaElementSource(audioPlayer);
+        source.connect(analyser);
+        analyser.connect(audioCtx.destination);
+        analyser.fftSize = 512;
+        bufferLength = analyser.frequencyBinCount;
+        audioDataArray = new Uint8Array(bufferLength);
+    }
+
+    function draw() {
+        requestAnimationFrame(draw);
+        analyser.getByteFrequencyData(audioDataArray);
+        canvasCtx.clearRect(0, 0, canvas.width, canvas.height);
+        let barWidth = (canvas.width / bufferLength) * 2.5;
+        let barHeight;
+        let x = 0;
+
+        for(let i = 0; i < bufferLength; i++) {
+            barHeight = audioDataArray[i];
+
+            let red = barHeight + (25 * (i/bufferLength));
+            let green = 450 * (i/bufferLength);
+            let blue = 350;
+
+            canvasCtx.fillStyle = 'rgb(' + red + ',' + green + ',' + blue + ')';
+            canvasCtx.fillRect(x, canvas.height - barHeight/2, barWidth, barHeight/2);
+
+            x += barWidth + 1;
+        }
+    }
+
+    audioPlayer.onplay = function() {
+        if (!audioCtx) {
+            setupWebAudio();
+        }
+        draw();
+    };
+</script>
+
+<!-- END --- visual song generate with js -->
+
+
+</body>
+<!-- 
+START: the license footer must remain unchanged 
+  <footer>
+    <p>
+      Copyright (c) 2023 FlorekPro/SeriesXbox. All rights reserved. 
+      <br>
+      This code is under the MIT license. You are free to use, modify, and distribute this code, but the information about the author - FlorekPro/SeriesXbox and the website seriesxbox.com - must remain unchanged in the footer.
+      <br>
+      For more information, visit www.seriesxbox.com.
+    </p>
+  </footer>
+END: the license footer must remain unchanged  
+--> 
+</html>
