--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="Play Radio Stream for FREE, using only the hosting server">
     <meta name="author" content="FlorekPro">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Audio Stream Simulation Time Server - ASSTS </title>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
